--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-#Banco local - Michelli
-spring.datasource.url= jdbc:postgresql://localhost:5432/produtos-apirest
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+## --/For Postgres configuration/-- ##
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
+
+#spring.datasource.url= jdbc:postgresql://localhost:5432/produtos-apirest
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.hibernate.ddl-auto=update
+
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/products-restapi
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.driver-class-name=org.h2.Driver
